# OpenCV-C

./: .gitignore  GammaRayOpenCV.sln  OpenCVC.sln  README.md
Demo/: Demo.c  Info.plist
Linux/: Build_lib_for_Linux.md
OpenCVC.xcodeproj/: project.pbxproj
OpenCVC.xcodeproj/xcshareddata/xcschemes/: Demo.xcscheme  GammaRayOpenCV.xcscheme
Source/: CMakeLists.txt  CVCBase.h  CVCCore.cpp  CVCCore.h  CVCImgCodecs.cpp  CVCImgCodecs.h  CVCImgProc.cpp  CVCImgProc.h  CVCObjectDetect.cpp  CVCObjectDetect.h  CVCPhoto.cpp  CVCPhoto.h  CVCPrivate.h  CVCStitching.cpp  CVCStitching.h  CVCTypes.cpp  CVCTypes.h  OpenCVC.cpp  OpenCVC.h
Windows/: Demo.vcxproj  Demo.vcxproj.filters  GammaRayOpenCV.vcxproj  GammaRayOpenCV.vcxproj.filters  OpenCVC.vcxproj  OpenCVC.vcxproj.filters  dllmain.cpp
Windows/opencv2/vc15/lib/: OpenCVConfig-version.cmake  OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-release.cmake
